--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AM1007.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://am1007.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "nanoid": "^3.3.4",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "shortid": "^2.2.16",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -40,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "prop-types": "^15.8.1"
   }
 }
